--- a/src/index.css
+++ b/src/index.css
@@ -8,5 +8,11 @@
 
 * {
   font-family: "Roboto", sans-serif;
-  
+}
+
+main {
+    min-height: 90vh;
+    max-width: 1280px;
+    margin: auto;
+    padding: 15px;
 }
